# flog

./: .gitignore  Cargo.toml  README.md  build.zig
compiler/: Cargo.toml  Lexer.zig  Parser.zig  Token.zig  main.zig
compiler/ast/: Expr.zig  Stmt.zig
compiler/lexer/: Lexer.zig  Token.zig
compiler/src/: error.rs  lib.rs  main.rs
compiler/src/lexer/: lexer_test.rs  macros.rs  mod.rs  token.rs
compiler/src/parser/: ast.rs  macros.rs  mod.rs  parser_test.rs
runtime/: Cargo.toml  instruction.zig  main.zig  value.zig
