[workspace]
members = ["compiler", "runtime"]

[workspace.package]
version = "0.1.0"
authors = ["The Typst Project Developers"]
edition = "2021"
readme = "README.md"
license = "MIT"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

